# QuadMorphFilter

./: CLAUDE.md  CMakeLists.txt  QuadMorphFilter_概要整理.md  README.md  Recording_UI_Proposal.md  プロジェクト全体仕様書.md
Source/: FilterA_SVF.cpp  FilterA_SVF.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TptFilter.cpp  TptFilter.h
Source/Assets/: QuadMorphFilter_UserManual_EN.md  QuadMorphFilter_UserManual_JP.md
Source/DSP/: FilterA_SVF.cpp  FilterA_SVF.h  FilterA_SVF_SIMD.cpp  FilterA_SVF_SIMD.h  Lfo5Engine.h  LfoEngine.cpp  LfoEngine.h  LfoEngine_LFO4.cpp  ModelCapabilities.h  MorphEngine.cpp  MorphEngine.h  TptFilter.cpp  TptFilter.h  TptFilterState.h
Source/DSP/TptFilter/AnalogEmulation/: TptFilter_AnalogEmulation.cpp  TptFilter_AnalogEmulation.h
Source/DSP/TptFilter/DigitalPrecision/: TptFilter_DigitalPrecision.cpp  TptFilter_DigitalPrecision.h
Source/DSP/TptFilter/Experimental/: TptFilter_Experimental.cpp  TptFilter_Experimental.h
Source/DSP/TptFilter/Ladder/: TptFilter_Ladder.cpp  TptFilter_Ladder.h
Source/DSP/TptFilter/SVF/: TptFilter_SVF.cpp  TptFilter_SVF.h
Source/DSP/TptFilter/Spectral/: TptFilter_Spectral.cpp  TptFilter_Spectral.h
Source/UI/: FilterVisualizer.cpp  FilterVisualizer.h  QuadMorphLookAndFeel.cpp  QuadMorphLookAndFeel.h  XYGridComponent.cpp  XYGridComponent.h  XYPadComponent.cpp  XYPadComponent.h
